[tool.poetry]
authors = ["Stig B. Dørmænen <stigbd@gmail.com>"]
description = ""
name = "photo-api"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
litestar = "^2.0.1"
psycopg = {extras = ["binary"], version = "^3.1.10"}
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.4.1"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
poetry = "^1.6.1"
pyclean = "^2.7.4"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[tool.mypy]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = false
warn_unreachable = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "pytest_mock.*",
  "pytest_postgresql.*",
  "docker.*",
]

[tool.coverage.paths]
source = ["photo_api", "*/site-packages"]

[tool.coverage.run]
branch = false
source = ["photo_api"]

[tool.coverage.report]
#fail_under = 100
omit = []
show_missing = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
